syntax = "proto3";

package go.micro.srv.house;

option go_package = "/proto/house";  //防止错误 protoc-gen-go: unable to determine Go import path

service House {

	// 查询房屋信息
	rpc GetHouseInfo(InfoReq) returns (InfoResp){}
	// 发布房屋信息
	rpc PubHouse(PubReq) returns (PubResp){}
	// 上传房屋图片
	rpc UploadHouseImg(ImgReq) returns (ImgResp){}
}

// 查询房屋信息
message InfoReq {
	string userName = 1;
}

message InfoResp {
	string errno = 1;
	string errmsg = 2;
	GetData data = 3;
}

message GetData{
	repeated Houses houses = 1;
}

message Houses {
	string address = 1;
	string area_name = 2;
	string ctime = 3;
	int32 house_id = 4;
	string img_url = 5;
	int32 order_count = 6;
	int32 price = 7;
	int32 room_count = 8;
	string title = 9;
	string user_avatar = 10;
}

// 发布房屋信息

message PubReq{
	string acreage = 1;
	string address = 2;
	string area_id = 3;
	string beds = 4;
	string capacity = 5;
	string deposit = 6;
	repeated string facility = 7;
	string max_days = 8;
	string min_days = 9;
	string price = 10;
	string room_count = 11;
	string title = 12;
	string unit = 13;
	string userName = 14;
}

message PubResp{
	string errno = 1;
	string errmsg = 2;
	HouseData data = 3;
}

message HouseData {
	string house_id = 1;
}

// 上传房屋图片

message ImgReq {
	string houseId = 1;
	bytes imgData = 2;
	string fileExt = 3;
}

message ImgData{
	string url = 1;
}

message ImgResp{
	string errno = 1;
	string errmsg = 2;
	ImgData data = 3;
}
