syntax = "proto3";

package go.micro.srv.order;

option go_package = "/proto/order";  //防止错误 protoc-gen-go: unable to determine Go import path

service Order {
	rpc CreateOrder(CreateReq) returns (CreateResp) {}

}


// 创建订单
message CreateReq {
	string house_id = 1;
	string start_date = 2;
	string end_date = 3;
	string userName = 4;
}

message CreateResp {
	string errno = 1;
	string errmsg = 2;
	OrderData data = 3;
}

message OrderData{
	string order_id = 1;
}